--- a/frontend/src/pages/gig/Gig.scss
+++ b/frontend/src/pages/gig/Gig.scss
@@ -21,6 +21,9 @@
         color: #555;
       }
 
+      h1 {
+      }
+
       .user {
         display: flex;
         align-items: center;
@@ -31,6 +34,10 @@
           height: 32px;
           border-radius: 50%;
           object-fit: cover;
+        }
+
+        .pics{
+          width: 12px;
         }
 
         span {
@@ -64,6 +71,8 @@
         }
       }
 
+     
+
       h2 {
         font-weight: 400;
       }
@@ -73,6 +82,8 @@
         line-height: 25px;
         color: #555;
       }
+
+     
 
       .seller {
         margin-top: 50px;
@@ -153,7 +164,9 @@
             margin-bottom: 20px;
           }
         }
-      } 
+      }
+
+      
     }
 
     .right {
