--- a/frontend/src/components/checkoutForm/CheckoutForm.scss
+++ b/frontend/src/components/checkoutForm/CheckoutForm.scss
@@ -4,10 +4,10 @@
     font-size: medium;
     font-weight: 400;
     color: red;
-    padding-top: 25px;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     button{
         gap: 20px;
@@ -20,6 +20,9 @@
         width: 100%;
         height: 30px;
         border: none;
+    }
 
+    .input{
+        gap: 10px;
     }
 }
