--- a/client/src/components/catCard/CatCard.scss
+++ b/client/src/components/catCard/CatCard.scss
@@ -1,10 +1,24 @@
 .catCard {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 10px;
   width: 252px;
   height: 344px;
   color: white;
   border-radius: 5px;
   position: relative;
   cursor: pointer;
+  animation: carouselAnimation 100s linear infinite;
+  
+  @keyframes carouselAnimation {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
 
   img {
     width: 100%;
