--- a/client/src/components/projectCard/ProjectCard.scss
+++ b/client/src/components/projectCard/ProjectCard.scss
@@ -1,4 +1,8 @@
 .projectCard {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 10px;
   width: 300px;
   height: 300px;
   border-radius: 5px;
