--- a/client/src/pages/gig/Gig.scss
+++ b/client/src/pages/gig/Gig.scss
@@ -21,8 +21,6 @@
         color: #555;
       }
 
-      h1 {
-      }
 
       .user {
         display: flex;
@@ -53,6 +51,7 @@
           img {
             height: 14px;
             width: 14px;
+
           }
 
           span {
@@ -63,18 +62,37 @@
         }
       }
 
-      .slider {
-        background-color: #F5F5F5;
-        img {
-          max-height: 500px;
-          object-fit: contain;
+      .logo-carousel {
+        width: 100%;
+        display: flex;
+        overflow: hidden;
+        white-space: nowrap;
+      
+        .logo {
+          display: inline-block;
+          padding: 20px;
+          animation: carouselAnimation 30s linear infinite;
+          
+          img {
+            padding: 10px;
+            max-width: 100%;
+            height: 500px;
+          }
         }
       }
-
-     
-
+      
+      @keyframes carouselAnimation {
+        0% {
+          transform: translateX(0);
+        }
+        100% {
+          transform: translateX(-100%);
+        }
+      }
+      
       h2 {
         font-weight: 400;
+        
       }
 
       p {
@@ -82,8 +100,6 @@
         line-height: 25px;
         color: #555;
       }
-
-     
 
       .seller {
         margin-top: 50px;
