--- a/client/src/components/projectCard/ProjectCard.scss
+++ b/client/src/components/projectCard/ProjectCard.scss
@@ -2,10 +2,11 @@
   display: inline-block;
   overflow: hidden;
   white-space: nowrap;
-  padding: 10px;
-  width: 300px;
-  height: 300px;
-  border-radius: 5px;
+  padding: 20px;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
   border: 1px solid rgb(225, 225, 225);
